--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -2903,6 +2903,9 @@ age-container #owl-main .owl-next {
 .copyright-bar .payment-methods {
   text-align: right;
 }
+.copyright-bar .copyright_text {
+  text-align: center;
+}
 .copyright-bar .payment-methods ul li {
   display: inline-block;
   margin-right: 15px;
@@ -5301,7 +5304,7 @@ age-container #owl-main .owl-next {
 }
 .shopping-cart .shopping-cart-table table tbody tr .romove-item a:hover,
 .shopping-cart .shopping-cart-table table tbody tr .romove-item a:focus {
-  color: #ff000 !important;
+  color: #fff000 !important;
 }
 .shopping-cart .shopping-cart-table table tbody tr .cart-image .entry-thumbnail {
   display: block;
